<resources>
    <string name="app_name">Remote Light</string>

    <!-- Device Activity -->
    <string name="device_id">Device name</string>
    <string name="temperature">°C</string>
    <string name="humidity">%</string>
    <string name="speaker">dB</string>


    <!-- Device Item -->
    <string name="device_position">Room 101, Building A</string>

    <!-- Sample Data -->
    <string name="sample_state">Delhi</string>
    <string name="empty_description">No description available.</string>
    <string name="sample_state_trending">#Delhi</string>

    <!-- login/signup strings -->
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="toast_invalid_username_or_password">Invalid username or password</string>
    <string name="empty_first_name">First name can\'t remain empty</string>
    <string name="empty_last_name">Last name can\'t remain empty</string>

    <!--AlertDialog sign out-->
    <string name="signout_message">Are you sure want to sign out?</string>
    <string name="positive_button">OK</string>
    <string name="default_name">--</string>
    <string name="email">Email</string>
    <string name="profile_icon">Profile_icon</string>
    <string name="mail_icon">mail_icon</string>
    <string name="info_icon">info_icon</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="invalid_password">Password must contain at least 1 Capital Alphabet, 1 Number and 1 Special Character.</string>
    <string name="password_length">Password must contain minimum 8 characters</string>
    <string name="invalid_email">Invalid Email</string>

    <!-- Constant texts -->
    <string name="text_hangout">Hangout</string>
    <string name="text_monuments">Monuments</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_city_trends">City Trends</string>
    <string name="text_city_map">City Map</string>
    <string name="text_login"><u>Already a member? Login</u></string>
    <string name="text_signup_or"><u>Not registered yet? Create new account</u></string>
    <string name="text_go">Go</string>
    <string name="text_locate">Locate</string>
    <string name="text_more">More</string>
    <string name="text_title">Title</string>
    <string name="text_call">Call</string>
    <string name="text_book">Book</string>
    <string name="text_joining_date">Joined on %1$s</string>
    <string name="profile_picture_updated">Profile Picture Updated!</string>
    <string name="text_source">"Source : "</string>
    <string name="no_friends_message">You haven\'t added any trip with friends yet</string>
    <string name="interest_know_more">Know More</string>
    <string name="interest_fun_facts">Fun Facts</string>
    <string name="interest_weather">View Weather Forecast</string>
    <string name="interest_trends">City Trends</string>
    <string name="status_length">22/100</string>
    <string name="name_length">22/50</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="usd_dollar">United States Dollar</string>
    <string name="usd_amount">1</string>
    <string name="inr">Indian Rupee</string>

    <!-- reset password strings -->
    <string name="submit">Submit</string>
    <string name="text_back_to_login"><u>Back to login</u></string>
    <string name="text_forgot_password"><u>Forgot password? Click here to reset.</u></string>
    <string name="text_resend_code"><u>Didn\'t get the code? Resend code.</u></string>
    <string name="text_code_sent_alert">A reset code has been sent to your email id : %1$s. Please enter the code below.</string>
    <string name="confirm">Confirm</string>
    <string name="text_code_resent_alert">A new code has been sent</string>
    <string name="text_password_updated_alert">Your password has been reset. Login with the new password.</string>

    <!-- Settings Strings -->
    <string name="change_password_heading">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="read_notifications_message">Show my read notifications</string>
    <string name="show_quotes_message">Show daily quotes</string>
    <string name="required_error">Required!</string>
    <string name="password_updated">Password Updated!</string>
    <string name="status_character_limit">/100</string>
    <string name="remove_photo">Remove photo</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="remove_profile_picture">Do you want to remove profile picture?</string>
    <string name="delete_account">Are you sure you want to remove your travel mate account? This action can\'t be undone.</string>

</resources>
