<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginApp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/remote"
                android:alpha="0.4"
                android:contentDescription="@string/empty_description"
                >
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:fontFamily="sans-serif-thin"
                    >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/tivi1">
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/inputuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        app:passwordToggleDrawable="@drawable/icon_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white"
                        >
                        <EditText
                            android:id="@+id/inputpass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" >
                        </EditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:onClick="clickLogin"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="end"
                        android:visibility="visible"
                        android:text="@string/text_signup_or"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="8dp"
                        android:text="@string/text_forgot_password"
                        android:layout_gravity="bottom"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        tools:ignore="RtlCompat" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>


</LinearLayout>